--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,5 +33,6 @@ jobs:
           npm install
           npm run build
       - uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
