--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,5 +35,8 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
-      - uses: actions/deploy-pages@v4
+      - name: deploy to gh-pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        
 
