--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,8 +41,6 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
-      - name: deploy to gh-pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
         
 
