--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,9 +20,13 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: diy-pwa/npm-build-2-gh-pages@v1.7
+      - uses: diy-pwa/npm-build-2-gh-pages@v1.8
         with: 
           github_token: ${{ secrets.GITHUB_TOKEN }}
