--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # run npm install, npm run build and publish to gh-pages
       - uses: diy-pwa/npm-build-2-gh-pages@v1.8
         with: 
           github_token: ${{ secrets.GITHUB_TOKEN }}
